--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
   --primary-color: #C2996F;
   --secondary-color: #362C27;
   --tertiary-color: #EDECEB;
+  --fourth-color: #D2CFCC;
   --gray-color: #E9E9E9;
   --light-color: #FAF9F8;
 
